--- a/Clean.Site/Clean.Site.csproj
+++ b/Clean.Site/Clean.Site.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Umbraco.Cms" Version="10.1.0" />
+    <PackageReference Include="uSync" Version="10.1.0" />
   </ItemGroup>
 
   <!-- Force Windows to use ICU. Otherwise Windows 10 2019H1+ will do it, but older Windows 10 and most, if not all, Windows Server editions will run NLS -->
