--- a/Clean.Site/uSync/v9/Content/home.config
+++ b/Clean.Site/uSync/v9/Content/home.config
@@ -13,6 +13,25 @@
     <Template Key="0104844d-25b7-4fcd-bee6-5b8b8daa8600">HomePage</Template>
   </Info>
   <Properties>
+    <footerSocialLinks>
+      <Value><![CDATA[[
+  {
+    "network": "github",
+    "name": "GitHub",
+    "url": "https://github.com/prjseal"
+  },
+  {
+    "network": "twitter",
+    "name": "Twitter",
+    "url": "https://twitter.com/CodeSharePaul"
+  },
+  {
+    "network": "youtube",
+    "name": "YouTube",
+    "url": "https://www.youtube.com/channel/PaulSealUK"
+  }
+]]]></Value>
+    </footerSocialLinks>
     <mainImage>
       <Value><![CDATA[[
   {
@@ -77,7 +96,7 @@
   },
   {
     "key": "b0b416ce-6aa7-47a6-b0e9-0cdf6e8f4c08",
-    "name": "Item 4",
+    "name": "Contact",
     "ncContentTypeAlias": "navigationItem",
     "PropType": null,
     "title": "Contact",
