--- a/Clean.Site/uSync/v9/ContentTypes/homepage.config
+++ b/Clean.Site/uSync/v9/ContentTypes/homepage.config
@@ -16,6 +16,7 @@
     </HistoryCleanup>
     <Folder>Pages</Folder>
     <Compositions>
+      <Composition Key="e1e5d3c7-d27d-4935-9dc4-c4df824ecb76">footerProperties</Composition>
       <Composition Key="b3c5f1e7-4bbb-4388-a6a2-c81db94a6ddb">headerProperties</Composition>
       <Composition Key="4b3de78f-ef86-48d5-8b3b-c0a910ee9414">siteNavigationProperties</Composition>
     </Compositions>
