All code to the end of episode 9

--- a/Clean.Site/uSync/v9/Content/about.config
+++ b/Clean.Site/uSync/v9/Content/about.config
@@ -14,11 +14,74 @@
   </Info>
   <Properties>
     <bodyText>
-      <Value><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-<p>This is a test, does it really work?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>]]></Value>
+      <Value><![CDATA[]]></Value>
     </bodyText>
+    <mainContent>
+      <Value><![CDATA[{
+  "layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentUdi": "umb://element/218efe41dda546fbbe4387ad67e20e31",
+        "settingsUdi": "umb://element/7f6c4d018b0542fcb21cdfc537816d1d"
+      },
+      {
+        "contentUdi": "umb://element/eebf77f261a544538493324dc5c3b105",
+        "settingsUdi": "umb://element/07fa27bf7fa344d5bce2815f5682a3e4"
+      },
+      {
+        "contentUdi": "umb://element/8e23503bbd284f189b8dfa4f49b05af7",
+        "settingsUdi": "umb://element/71ce3669792747e089c54e7331bb4ecd"
+      }
+    ]
+  },
+  "contentData": [
+    {
+      "contentTypeKey": "ac2e4966-85c9-4137-ae63-e07f820f88b1",
+      "udi": "umb://element/218efe41dda546fbbe4387ad67e20e31",
+      "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nibh purus, dictum eget urna ac, suscipit gravida leo. Nunc pretium massa sed tellus auctor mollis. Sed tristique diam lectus, eget ultrices arcu malesuada non. Aenean eu fringilla nisl, quis venenatis velit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam sem mi, placerat et nibh vitae, porta iaculis dui. Morbi neque purus, commodo sit amet nibh ac, rhoncus sagittis ex. Curabitur eget aliquam mauris. Quisque eget nulla nibh. Vestibulum at sollicitudin felis, in iaculis mauris. In tincidunt ut lacus a viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur at erat nec arcu venenatis auctor sed vel sem.</p>\n<p>Suspendisse faucibus lacinia congue. Duis diam eros, imperdiet ac nisl ut, cursus venenatis risus. Curabitur vitae nisi lacinia, dapibus elit non, iaculis lacus. Nulla et iaculis neque. Nulla porttitor justo velit, quis lobortis magna dignissim ut. Nunc interdum iaculis erat, ut aliquet nibh ultrices vulputate. Sed consectetur bibendum pulvinar. Mauris efficitur justo lectus, a lobortis turpis pretium posuere. Nunc eget felis lacus.</p>"
+    },
+    {
+      "contentTypeKey": "ac2e4966-85c9-4137-ae63-e07f820f88b1",
+      "udi": "umb://element/8e23503bbd284f189b8dfa4f49b05af7",
+      "content": "<p>Sed sagittis quam sed rutrum accumsan. Phasellus semper justo ac eros semper vulputate. Curabitur ac erat condimentum, euismod diam ut, porta nisi. Sed ut felis sapien. Mauris ullamcorper finibus elit, nec bibendum risus ultricies at. Donec congue tincidunt libero, eu posuere nisl malesuada eget. Integer tristique blandit metus sit amet posuere. Quisque malesuada, nulla et mattis tristique, lorem odio hendrerit magna, a semper felis nibh sed dolor. Cras ullamcorper commodo dui id eleifend. Aliquam egestas sollicitudin iaculis. Quisque ante tellus, porta a urna a, lobortis fermentum felis. Nam tempus congue nulla ut iaculis. Suspendisse neque libero, porta quis scelerisque et, mollis id nisi. Aenean dignissim nibh orci, faucibus suscipit velit pellentesque sed.</p>"
+    },
+    {
+      "contentTypeKey": "80e32829-baab-4a5e-90a4-5cb2b37109bb",
+      "udi": "umb://element/eebf77f261a544538493324dc5c3b105",
+      "image": [
+        {
+          "key": "e290aaca-bc3d-4af2-8b69-cc479bbd5b2b",
+          "mediaKey": "a0f0686a-d64c-4ef7-b5ed-1d6923921298"
+        }
+      ],
+      "caption": "This is a picture of my pet frog",
+      "link": [
+        {
+          "name": "Frogs on Google",
+          "target": "_blank",
+          "url": "https://google.com?query=frogs"
+        }
+      ]
+    }
+  ],
+  "settingsData": [
+    {
+      "contentTypeKey": "c5d15e9e-8637-47be-bf5f-bcbdde739953",
+      "udi": "umb://element/7f6c4d018b0542fcb21cdfc537816d1d",
+      "hide": "1"
+    },
+    {
+      "contentTypeKey": "f799051f-7674-46e5-8afa-39faf5745936",
+      "udi": "umb://element/07fa27bf7fa344d5bce2815f5682a3e4",
+      "hide": "1"
+    },
+    {
+      "contentTypeKey": "c5d15e9e-8637-47be-bf5f-bcbdde739953",
+      "udi": "umb://element/71ce3669792747e089c54e7331bb4ecd"
+    }
+  ]
+}]]></Value>
+    </mainContent>
     <mainImage>
       <Value><![CDATA[[
   {
