--- a/Clean.Site/uSync/v9/ContentTypes/richtextrow.config
+++ b/Clean.Site/uSync/v9/ContentTypes/richtextrow.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="d612674c-f371-4f92-9288-942e63060a2c" Alias="contentProperties" Level="2">
+<ContentType Key="ac2e4966-85c9-4137-ae63-e07f820f88b1" Alias="richTextRow" Level="4">
   <Info>
-    <Name>Content Properties</Name>
-    <Icon>icon-defrag color-pink</Icon>
+    <Name>Rich Text Row</Name>
+    <Icon>icon-umb-content color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -14,7 +14,7 @@
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Compositions</Folder>
+    <Folder>Elements/Content+Blocks/Content+Models</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
@@ -22,30 +22,14 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>1bdc381f-437f-4f4f-bc2d-14b600e1af12</Key>
-      <Name>Body Text</Name>
-      <Alias>bodyText</Alias>
+      <Key>28fe6573-fc00-4e3b-8523-aceb290b05af</Key>
+      <Name>Content</Name>
+      <Alias>content</Alias>
       <Definition>ca90c950-0aff-4e72-b976-a30b1ac57dad</Definition>
       <Type>Umbraco.TinyMCE</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[Enter the rich text for this page]]></Description>
-      <SortOrder>5</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>56355dc9-284d-4969-9bbe-e730ef4ae7e2</Key>
-      <Name>Main Content</Name>
-      <Alias>mainContent</Alias>
-      <Definition>bb55bfbc-23c4-40e5-8a33-e1e003905e41</Definition>
-      <Type>Umbraco.BlockList</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[Enter the main content rows for this page]]></Description>
+      <Description><![CDATA[Enter the content for this item]]></Description>
       <SortOrder>0</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
@@ -56,11 +40,11 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>8a515cc5-acda-4283-ba25-00d7facda364</Key>
+      <Key>a81baa8c-1ae9-41fc-94bb-0c00c65cb9a3</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
-      <SortOrder>20</SortOrder>
+      <SortOrder>0</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
