all code to the end of episode 10

--- a/Clean.Site/uSync/v9/Content/about.config
+++ b/Clean.Site/uSync/v9/Content/about.config
@@ -31,6 +31,10 @@
       {
         "contentUdi": "umb://element/8e23503bbd284f189b8dfa4f49b05af7",
         "settingsUdi": "umb://element/71ce3669792747e089c54e7331bb4ecd"
+      },
+      {
+        "contentUdi": "umb://element/fd2f7f873415413b85001bd6acb79d89",
+        "settingsUdi": "umb://element/e4ae0e59344d43e6ade342fb029d619e"
       }
     ]
   },
@@ -62,6 +66,100 @@
           "url": "https://google.com?query=frogs"
         }
       ]
+    },
+    {
+      "contentTypeKey": "5ac62690-aa64-4335-8a31-5224550fd73a",
+      "udi": "umb://element/fd2f7f873415413b85001bd6acb79d89",
+      "title": "Featured Items",
+      "description": "These are some items I thought you would be interested in",
+      "featuredItems": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/29bd5ce13fec453dbc57d2d7647eaf6f",
+              "settingsUdi": "umb://element/350e1dc373474c22921993370b8f8667"
+            },
+            {
+              "contentUdi": "umb://element/51d4b863a4524069addcb5c2767c6c71",
+              "settingsUdi": "umb://element/60fcd1a7fa974eb994b1c228f3bd9996"
+            },
+            {
+              "contentUdi": "umb://element/1bdfea0b0e444d74a34a2e9540f67376",
+              "settingsUdi": "umb://element/c6cf64261cbc4c37b1072b041d866a54"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "42ac82ca-8b23-4643-b151-ba4bd553e892",
+            "udi": "umb://element/29bd5ce13fec453dbc57d2d7647eaf6f",
+            "image": [
+              {
+                "key": "bd589a79-e11a-49b7-8c78-84e159da4c0f",
+                "mediaKey": "a0f0686a-d64c-4ef7-b5ed-1d6923921298"
+              }
+            ],
+            "link": [
+              {
+                "name": "Blog",
+                "udi": "umb://document/c606cba8dfeb4db599bee297710fe601"
+              }
+            ],
+            "title": "First one",
+            "description": "This is the first featured item"
+          },
+          {
+            "contentTypeKey": "42ac82ca-8b23-4643-b151-ba4bd553e892",
+            "udi": "umb://element/51d4b863a4524069addcb5c2767c6c71",
+            "image": [
+              {
+                "key": "0510a3d5-73ba-475e-bc25-da238f1d5a0c",
+                "mediaKey": "a682490c-f763-49c0-9f7e-db20800d6677"
+              }
+            ],
+            "link": [
+              {
+                "name": "Contact",
+                "udi": "umb://document/5e389936b1424867b332a405fac18f6d"
+              }
+            ],
+            "title": "Second Item",
+            "description": "This is another one that I thought you might like"
+          },
+          {
+            "contentTypeKey": "42ac82ca-8b23-4643-b151-ba4bd553e892",
+            "udi": "umb://element/1bdfea0b0e444d74a34a2e9540f67376",
+            "image": [
+              {
+                "key": "d7802004-c6fe-4fc1-aa4e-177b447dd6ba",
+                "mediaKey": "a0f0686a-d64c-4ef7-b5ed-1d6923921298"
+              }
+            ],
+            "link": [
+              {
+                "name": "Home",
+                "udi": "umb://document/f8ae041e094a4aa09903971245cab3ae"
+              }
+            ],
+            "title": "Last One",
+            "description": "This is the last featured item to share"
+          }
+        ],
+        "settingsData": [
+          {
+            "contentTypeKey": "50e50fe5-6f47-4daa-a76d-1c5c0aa603d1",
+            "udi": "umb://element/350e1dc373474c22921993370b8f8667"
+          },
+          {
+            "contentTypeKey": "50e50fe5-6f47-4daa-a76d-1c5c0aa603d1",
+            "udi": "umb://element/60fcd1a7fa974eb994b1c228f3bd9996"
+          },
+          {
+            "contentTypeKey": "50e50fe5-6f47-4daa-a76d-1c5c0aa603d1",
+            "udi": "umb://element/c6cf64261cbc4c37b1072b041d866a54"
+          }
+        ]
+      }
     }
   ],
   "settingsData": [
@@ -78,6 +176,11 @@
     {
       "contentTypeKey": "c5d15e9e-8637-47be-bf5f-bcbdde739953",
       "udi": "umb://element/71ce3669792747e089c54e7331bb4ecd"
+    },
+    {
+      "contentTypeKey": "5f89400d-ca33-412e-828f-9f5830a4c2f7",
+      "udi": "umb://element/e4ae0e59344d43e6ade342fb029d619e",
+      "hide": "0"
     }
   ]
 }]]></Value>
