--- a/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
+++ b/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
@@ -30,10 +30,22 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "5ac62690-aa64-4335-8a31-5224550fd73a",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{ title != '' ? title : 'Featured Items ' + $index}} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
+      "settingsElementTypeKey": "5f89400d-ca33-412e-828f-9f5830a4c2f7",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "MaxPropertyWidth": null,
-  "UseInlineEditingAsDefault": true,
+  "UseInlineEditingAsDefault": false,
   "UseLiveEditing": false,
   "ValidationLimit": {
     "max": null,
