All code to the end of episode 11

--- a/Clean.Site/uSync/v9/Content/about.config
+++ b/Clean.Site/uSync/v9/Content/about.config
@@ -35,6 +35,14 @@
       {
         "contentUdi": "umb://element/fd2f7f873415413b85001bd6acb79d89",
         "settingsUdi": "umb://element/e4ae0e59344d43e6ade342fb029d619e"
+      },
+      {
+        "contentUdi": "umb://element/24cf8b578079425083ed8ffebb3a886b",
+        "settingsUdi": "umb://element/0d0835716acd49d1b8c64f6cf6050206"
+      },
+      {
+        "contentUdi": "umb://element/0908f2dbdf1740689cef46df62d22953",
+        "settingsUdi": "umb://element/234f0657ee544065930b2ebd865e557e"
       }
     ]
   },
@@ -160,6 +168,122 @@
           }
         ]
       }
+    },
+    {
+      "contentTypeKey": "4b14f682-a560-4f89-875a-c8195e1ed959",
+      "udi": "umb://element/24cf8b578079425083ed8ffebb3a886b",
+      "title": "FAQs",
+      "description": "These are some FAQs",
+      "accordionItems": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/cd005ffdd7d9403ba6eb1f467a82396f",
+              "settingsUdi": "umb://element/f1625b6e0b964d98a39f12d8e818d690"
+            },
+            {
+              "contentUdi": "umb://element/a91215d7b1f7435897cfa2f0d7ba57a9",
+              "settingsUdi": "umb://element/5d7f2e5c2cad4570b6bd0866cad84e6c"
+            },
+            {
+              "contentUdi": "umb://element/b3a5c828568047ecb0425c90a6b65d30",
+              "settingsUdi": "umb://element/bfee7dd0da074dc08c55fc90b94a28e5"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "add064bb-20f1-4bbf-8e42-fc6a222376ec",
+            "udi": "umb://element/cd005ffdd7d9403ba6eb1f467a82396f",
+            "title": "What is your name?",
+            "content": "<p>My name is Paul Seal</p>"
+          },
+          {
+            "contentTypeKey": "add064bb-20f1-4bbf-8e42-fc6a222376ec",
+            "udi": "umb://element/a91215d7b1f7435897cfa2f0d7ba57a9",
+            "title": "Where do you work?",
+            "content": "<p>I work for Moriyama, Umbraco Gold Partners.</p>"
+          },
+          {
+            "contentTypeKey": "add064bb-20f1-4bbf-8e42-fc6a222376ec",
+            "udi": "umb://element/b3a5c828568047ecb0425c90a6b65d30",
+            "title": "Have you been to Codegarden",
+            "content": "<p>Yes, I have been 3 times, to Codegarden in Denmark.</p>"
+          }
+        ],
+        "settingsData": [
+          {
+            "contentTypeKey": "f9b7b6f5-96a0-4fe5-a48c-d0ce24b27a83",
+            "udi": "umb://element/f1625b6e0b964d98a39f12d8e818d690"
+          },
+          {
+            "contentTypeKey": "f9b7b6f5-96a0-4fe5-a48c-d0ce24b27a83",
+            "udi": "umb://element/5d7f2e5c2cad4570b6bd0866cad84e6c"
+          },
+          {
+            "contentTypeKey": "f9b7b6f5-96a0-4fe5-a48c-d0ce24b27a83",
+            "udi": "umb://element/bfee7dd0da074dc08c55fc90b94a28e5"
+          }
+        ]
+      }
+    },
+    {
+      "contentTypeKey": "4b14f682-a560-4f89-875a-c8195e1ed959",
+      "udi": "umb://element/0908f2dbdf1740689cef46df62d22953",
+      "title": "FAQs",
+      "description": "These are some FAQs",
+      "accordionItems": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/8dad61a6402f417291a3247a40dcbf82",
+              "settingsUdi": "umb://element/fdcdc014f4c041d085cf0f9f05935680"
+            },
+            {
+              "contentUdi": "umb://element/10e872dbed5f4614b02b91c1bfcc145d",
+              "settingsUdi": "umb://element/24c8679faed44995b5e97f4e748aadf4"
+            },
+            {
+              "contentUdi": "umb://element/565bc9c6fb0346c181b3f4aacfb20286",
+              "settingsUdi": "umb://element/5bc610e9e1be44c380c7971b7aa54bb7"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "add064bb-20f1-4bbf-8e42-fc6a222376ec",
+            "udi": "umb://element/8dad61a6402f417291a3247a40dcbf82",
+            "title": "What is your name?",
+            "content": "<p>My name is Paul Seal</p>"
+          },
+          {
+            "contentTypeKey": "add064bb-20f1-4bbf-8e42-fc6a222376ec",
+            "udi": "umb://element/10e872dbed5f4614b02b91c1bfcc145d",
+            "title": "Where do you work?",
+            "content": "<p>I work for Moriyama, Umbraco Gold Partners.</p>"
+          },
+          {
+            "contentTypeKey": "add064bb-20f1-4bbf-8e42-fc6a222376ec",
+            "udi": "umb://element/565bc9c6fb0346c181b3f4aacfb20286",
+            "title": "Have you been to Codegarden",
+            "content": "<p>Yes, I have been 3 times, to Codegarden in Denmark.</p>"
+          }
+        ],
+        "settingsData": [
+          {
+            "contentTypeKey": "f9b7b6f5-96a0-4fe5-a48c-d0ce24b27a83",
+            "udi": "umb://element/fdcdc014f4c041d085cf0f9f05935680"
+          },
+          {
+            "contentTypeKey": "f9b7b6f5-96a0-4fe5-a48c-d0ce24b27a83",
+            "udi": "umb://element/24c8679faed44995b5e97f4e748aadf4"
+          },
+          {
+            "contentTypeKey": "f9b7b6f5-96a0-4fe5-a48c-d0ce24b27a83",
+            "udi": "umb://element/5bc610e9e1be44c380c7971b7aa54bb7"
+          }
+        ]
+      }
     }
   ],
   "settingsData": [
@@ -180,6 +304,16 @@
     {
       "contentTypeKey": "5f89400d-ca33-412e-828f-9f5830a4c2f7",
       "udi": "umb://element/e4ae0e59344d43e6ade342fb029d619e",
+      "hide": "0"
+    },
+    {
+      "contentTypeKey": "6c624f81-186c-48a2-af6c-f6b48fa5f95f",
+      "udi": "umb://element/0d0835716acd49d1b8c64f6cf6050206",
+      "hide": "0"
+    },
+    {
+      "contentTypeKey": "6c624f81-186c-48a2-af6c-f6b48fa5f95f",
+      "udi": "umb://element/234f0657ee544065930b2ebd865e557e",
       "hide": "0"
     }
   ]
