--- a/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
+++ b/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
@@ -25,7 +25,7 @@
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false,
       "iconColor": null,
-      "label": "{{ 'Image Row ' + $index }} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
+      "label": "{{ 'Image ' + $index }} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
       "settingsElementTypeKey": "f799051f-7674-46e5-8afa-39faf5745936",
       "stylesheet": null,
       "thumbnail": null,
@@ -39,6 +39,18 @@
       "iconColor": null,
       "label": "{{ title != '' ? title : 'Featured Items ' + $index}} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
       "settingsElementTypeKey": "5f89400d-ca33-412e-828f-9f5830a4c2f7",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "4b14f682-a560-4f89-875a-c8195e1ed959",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{ title != '' ? title : 'Accordion ' + $index}} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
+      "settingsElementTypeKey": "6c624f81-186c-48a2-af6c-f6b48fa5f95f",
       "stylesheet": null,
       "thumbnail": null,
       "view": null
