Accordion Block - FAQ schema markup setting
Added the setting to the Accordion Row block to give the editor the ability to apply FAQ schema markup. Schema markup, also known as structured data, is the language search engines use to read and understand the content on your pages. Applying FAQ schema helps a search engine understand your accordion items and interprets them as FAQ's.

--- a/Clean.Site/uSync/v9/ContentTypes/accordionrowsettings.config
+++ b/Clean.Site/uSync/v9/ContentTypes/accordionrowsettings.config
@@ -22,6 +22,31 @@
     <AllowedTemplates />
   </Info>
   <Structure />
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>ed406bb4-883e-421f-b915-1f54f80fb29a</Key>
+      <Name>Apply FAQ Schema</Name>
+      <Alias>applyFAQSchema</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Schema markup, also known as structured data, is the language search engines use to read and understand the content on your pages. Applying FAQ schema helps a search engine understand your accordion items and interprets them as FAQ's.]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="settings">Settings</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>3268ee08-5875-4d8f-8bf7-a9fce80fec1b</Key>
+      <Caption>Settings</Caption>
+      <Alias>settings</Alias>
+      <Type>Tab</Type>
+      <SortOrder>100</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
