All code to the end of episode 12

--- a/Clean.Site/uSync/v9/Content/about.config
+++ b/Clean.Site/uSync/v9/Content/about.config
@@ -21,6 +21,10 @@
   "layout": {
     "Umbraco.BlockList": [
       {
+        "contentUdi": "umb://element/f2d9109be4594e1cba3bf867376dff55",
+        "settingsUdi": "umb://element/d6951c35df484e56b6b515f88147fb82"
+      },
+      {
         "contentUdi": "umb://element/218efe41dda546fbbe4387ad67e20e31",
         "settingsUdi": "umb://element/7f6c4d018b0542fcb21cdfc537816d1d"
       },
@@ -284,6 +288,20 @@
           }
         ]
       }
+    },
+    {
+      "contentTypeKey": "953a0ae9-d75f-41dc-bec9-9c614e38ec1b",
+      "udi": "umb://element/f2d9109be4594e1cba3bf867376dff55",
+      "quoteText": "<p>Don't let the fear of the time it will take to accomplish something stand in the way of your doing it. <br />The time will pass anyway; we might just as well put that passing time to the best possible use.</p>",
+      "quoteAuthor": "Earl Nightingale",
+      "authorJobTitle": "American radio speaker and author",
+      "citeLink": [
+        {
+          "name": "https://www.brainyquote.com/authors/earl-nightingale-quotes",
+          "target": "_blank",
+          "url": "https://www.brainyquote.com/authors/earl-nightingale-quotes"
+        }
+      ]
     }
   ],
   "settingsData": [
@@ -315,6 +333,14 @@
       "contentTypeKey": "6c624f81-186c-48a2-af6c-f6b48fa5f95f",
       "udi": "umb://element/234f0657ee544065930b2ebd865e557e",
       "hide": "0"
+    },
+    {
+      "contentTypeKey": "f31c9dde-5a89-4774-8b8f-8c10c3f916f2",
+      "udi": "umb://element/d6951c35df484e56b6b515f88147fb82",
+      "hide": "0",
+      "textAlignment": [
+        "right"
+      ]
     }
   ]
 }]]></Value>
