--- a/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
+++ b/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
@@ -54,6 +54,18 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "953a0ae9-d75f-41dc-bec9-9c614e38ec1b",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "",
+      "settingsElementTypeKey": "f31c9dde-5a89-4774-8b8f-8c10c3f916f2",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "MaxPropertyWidth": null,
