All code to the end of episode 13

--- a/Clean.Site/uSync/v9/Content/about.config
+++ b/Clean.Site/uSync/v9/Content/about.config
@@ -21,6 +21,10 @@
   "layout": {
     "Umbraco.BlockList": [
       {
+        "contentUdi": "umb://element/21b9846616394679a7dd548f9cb27742",
+        "settingsUdi": "umb://element/a3de1993f7e94849ae3cf9b805ef130b"
+      },
+      {
         "contentUdi": "umb://element/f2d9109be4594e1cba3bf867376dff55",
         "settingsUdi": "umb://element/d6951c35df484e56b6b515f88147fb82"
       },
@@ -302,6 +306,62 @@
           "url": "https://www.brainyquote.com/authors/earl-nightingale-quotes"
         }
       ]
+    },
+    {
+      "contentTypeKey": "2313fa38-d735-46ac-bdf6-e6542ad60232",
+      "udi": "umb://element/21b9846616394679a7dd548f9cb27742",
+      "carouselItems": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/e1c61b9512ce42e79dea05e9ece24434",
+              "settingsUdi": "umb://element/0dddeb2abc5a419f8209301672e6592f"
+            },
+            {
+              "contentUdi": "umb://element/295bd69a7eca441e97ca50e527023e55",
+              "settingsUdi": "umb://element/a1b0919a49e143de9dd4c712c562b4be"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "8509590e-fbed-411e-845a-619cf11da5c7",
+            "udi": "umb://element/e1c61b9512ce42e79dea05e9ece24434",
+            "title": "Slide 1",
+            "description": "Slide 1 Description",
+            "image": [
+              {
+                "key": "24ad0ec5-5181-43e3-a022-004d789b17eb",
+                "mediaKey": "a682490c-f763-49c0-9f7e-db20800d6677"
+              }
+            ]
+          },
+          {
+            "contentTypeKey": "8509590e-fbed-411e-845a-619cf11da5c7",
+            "udi": "umb://element/295bd69a7eca441e97ca50e527023e55",
+            "title": "Slide 2",
+            "description": "Slide 2 Description",
+            "image": [
+              {
+                "key": "371f6c75-4dbf-4a91-885d-008176ce3b38",
+                "mediaKey": "a0f0686a-d64c-4ef7-b5ed-1d6923921298"
+              }
+            ]
+          }
+        ],
+        "settingsData": [
+          {
+            "contentTypeKey": "0ab8793c-db06-4fc7-82f4-6214da7f640f",
+            "udi": "umb://element/0dddeb2abc5a419f8209301672e6592f",
+            "hide": "0"
+          },
+          {
+            "contentTypeKey": "0ab8793c-db06-4fc7-82f4-6214da7f640f",
+            "udi": "umb://element/a1b0919a49e143de9dd4c712c562b4be",
+            "hide": "0"
+          }
+        ]
+      }
     }
   ],
   "settingsData": [
@@ -341,6 +401,14 @@
       "textAlignment": [
         "right"
       ]
+    },
+    {
+      "contentTypeKey": "b76d6507-842d-4b7c-bd2c-16b3f9cf6a93",
+      "udi": "umb://element/a3de1993f7e94849ae3cf9b805ef130b",
+      "hide": "0",
+      "showIndicators": "0",
+      "showNavigationArrows": "0",
+      "showDarkMode": "0"
     }
   ]
 }]]></Value>
