--- a/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
+++ b/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
@@ -66,6 +66,18 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "2313fa38-d735-46ac-bdf6-e6542ad60232",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{ 'Carousel ' + $index }} {{$settings.hide == '1' ? '[HIDDEN]' : '' }}",
+      "settingsElementTypeKey": "b76d6507-842d-4b7c-bd2c-16b3f9cf6a93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "MaxPropertyWidth": null,
