--- a/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
+++ b/Clean.Site/uSync/v9/DataTypes/BlockListMainContent.config
@@ -15,9 +15,9 @@
       "iconColor": null,
       "label": "{{ 'Rich Text ' + $index }} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
       "settingsElementTypeKey": "c5d15e9e-8637-47be-bf5f-bcbdde739953",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -27,9 +27,9 @@
       "iconColor": null,
       "label": "{{ 'Image ' + $index }} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
       "settingsElementTypeKey": "f799051f-7674-46e5-8afa-39faf5745936",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -39,9 +39,9 @@
       "iconColor": null,
       "label": "{{ title != '' ? title : 'Featured Items ' + $index}} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
       "settingsElementTypeKey": "5f89400d-ca33-412e-828f-9f5830a4c2f7",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -51,9 +51,9 @@
       "iconColor": null,
       "label": "{{ title != '' ? title : 'Accordion ' + $index}} {{$settings.hide == '1' ? '[HIDDEN]' : ''}}",
       "settingsElementTypeKey": "6c624f81-186c-48a2-af6c-f6b48fa5f95f",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -63,9 +63,9 @@
       "iconColor": null,
       "label": "",
       "settingsElementTypeKey": "f31c9dde-5a89-4774-8b8f-8c10c3f916f2",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     },
     {
       "backgroundColor": null,
@@ -75,9 +75,9 @@
       "iconColor": null,
       "label": "{{ 'Carousel ' + $index }} {{$settings.hide == '1' ? '[HIDDEN]' : '' }}",
       "settingsElementTypeKey": "b76d6507-842d-4b7c-bd2c-16b3f9cf6a93",
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/BlockListViews/Blocks/block-preview.html"
     }
   ],
   "MaxPropertyWidth": null,
